# my-cloud

./: .gitignore  Cargo.toml
cloud-core/: Cargo.toml
cloud-core/src/: block.rs  cloud_mgr.rs  db_schema.rs  error.rs  lib.rs  store_service.rs
cloud-core/src/block/: fs_handler.rs  s3_handler.rs  tests.rs
cloud-core/src/db_schema/: file_histories.rs  files.rs  users.rs  workspaces.rs
cloud-core/src/store_service/: cloud_block.rs  cloud_file.rs  inner_utils.rs  tests.rs
cloud-core/src/utils/: snowflake.rs
cloud-utils/: Cargo.toml
cloud-utils/src/: digest.rs  snowflake.rs
cloud-web/: Cargo.toml
cloud-web/src/: api.rs  api_common.rs  config.rs  lib.rs  main.rs
cloud-web/src/api/: error.rs  extractor.rs  storage.rs  storages.rs  users.rs  workspaces.rs
cloud-web/src/api_common/: storage.rs  storages.rs  user.rs  users.rs  workspaces.rs
cloud-web/tests/: test.rs
migrations/: 20230405111930_init.down.sql  20230405111930_init.up.sql  20230405112054_files.down.sql  20230405112054_files.up.sql  20230405112057_users.down.sql  20230405112057_users.up.sql  20230405112108_file_histories.down.sql  20230405112108_file_histories.up.sql  20230405112115_trigger.down.sql  20230405112115_trigger.up.sql  20230419094023_workspaces.down.sql  20230419094023_workspaces.up.sql
rfcs/: 0000-core-mycloud.md
