[package]
name = "cloud-core"
version = {workspace = true} 
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4"] }
