[package]
name = "cloud-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart", "headers"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
cloud-core = { path = "../cloud-core" }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace", "tower", "add-extension"] }
tower = "0.4.13"
anyhow = "1.0.70"
argon2 = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }
jwt = "0.16.0"
hmac = { version = "0.12.1" }
sha2 = "0.10.6"
time = "0.3.20"
async-trait = "0.1.68"
thiserror = "1.0.40"
log = "0.4.17"
bytes = "1.4.0"

[lib]
name = "cloud_web"
